zokrates_cli/examples/compile_errors/generics/undeclared_struct_generic.zok
struct A {
    field[N] a;
}

def main() {
    return;
}
